--- a/index.html
+++ b/index.html
@@ -61,10 +61,15 @@
               <a class="About-text2" href="">About-us</a>
              </div>
           </div>        
-      </div>
-    </div>
-
+        </div>
+     </div>
     </header>
+
+    <section>
+        <div class="map-div">
+            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d95247.08892617092!2d44.74829581670969!3d41.75349044945783!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40440d2174b86beb%3A0x118b7d18679e4e22!2sNewYorker!5e0!3m2!1ska!2sge!4v1675799818490!5m2!1ska!2sge" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </section>
     
 </body>
 </html>
