--- a/index.html
+++ b/index.html
@@ -104,6 +104,21 @@
 
         </div>
     </section>
+
+    <section>
+        <div>
+            <div class="icons-div" >
+                
+                <div class="icon">
+                    <i class="fa-regular fa-envelope"></i>                    
+                </div>
+                <h2 class="email-h2">Email</h2>
+                <a class="email-adress" href="mailltoexample@yahoo.com
+                    exampleemail2@yahoo.com">example@yahoo.com
+                    exampleemail2@yahoo.com</a>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
