--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 
     <section>
         <div class="contact-icons">
+<!-- 1 -->
             <div class="icons-div" >
                 <div class="icon">
                     <i class="fa-regular fa-envelope"></i>                    
@@ -120,19 +121,21 @@
                 <a class="email-adress" href="exampleemail2@yahoo.com">exampleemail2@yahoo.com</a>
                 </div>
             </div>
-
-            <div class="icons-div" >
+<!-- 2 -->
+            <div class="icons-div">
                 <div class="icon">
                     <i class="fa-solid fa-phone"></i>                   
                 </div>
+                
               <div class="text-div"> 
                 <h2 class="email-h2">Phone</h2>
                 <a class="email-adress" href="+0 320 422 4254">+0 320 422 4254</a>
                 <a class="email-adress" href="+0 342 552 523">+0 342 552 523</a>
               </div>
             </div>
+<!-- 3 -->
 
-             <div class="icons-div" >
+             <div class="icons-div">
                 <div class="icon">
                     <i class="fa-solid fa-location-pin"></i>                    
                 </div>
@@ -146,7 +149,7 @@
         </div>
     </section>
 
-    <section>
+    <section class="section-2">
         
             <h4 class="photos">PHOTOS</h4>
             <h2 class="see">See our latest photos
