--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                 <div class="icon">
                     <i class="fa-regular fa-envelope"></i>                    
                 </div>
+                
                 <div class="text-div">
                 <h2 class="email-h2">Email</h2>
                 <a class="email-adress" href="mailltoexample@yahoo.com">example@yahoo.com</a>
@@ -140,7 +141,7 @@
                     <i class="fa-solid fa-location-pin"></i>                    
                 </div>
 
-                <div class="text-div">
+                <div class="icons-div">
                 <h2 class="email-h2">Location</h2>
                 <a class="email-adress" href="">Main Str Chicago Ilinois
                     Main Street New York City</a>
